Added CachedFaucet code to run pipeline and get relevant slot values given slot names. Generate all synonyms of the whole ontology graph.