@@ -4,22 +4,15 @@ version := "0.01"
 
 scalaVersion := "2.9.2"
 
-scalacOptions ++= Seq("-unchecked", "-deprecation", "memoryMaximumSize=9G")
-
-javaOptions ++= Seq("-Xmx9G", "-XX:+HeapDumpOnOutOfMemoryError", "-XX:MinHeapFreeRatio=60", "-XX:-PrintGC", "-XX:+UseParallelGC")
-
 resolvers += "spray repo" at "http://repo.spray.io"
 
 resolvers += "Typesafe Repository" at "http://repo.typesafe.com/typesafe/releases"
 
 resolvers += "opennlp sourceforge repo" at "http://opennlp.sourceforge.net/maven2"
 
-
 libraryDependencies += "net.sf.jwordnet" % "jwnl" % "1.4_rc3"
 
-libraryDependencies += "edu.mit" % "jwi" % "2.2.3"
-
-            
+libraryDependencies += "edu.mit" % "jwi" % "2.2.3"            
 
 libraryDependencies += "org.apache.thrift" % "libthrift" % "0.9.0"
 
